# splin

./: .gitignore  README.md  eval_rmse.py  run.sh
PPLIO/: CMakeLists.txt  package.xml
PPLIO/config/: hilti.yaml  hilti_orig.yaml  hilti_plane_plot.yaml  livox.yaml  newer_college.yaml  newer_college_plane_plot.yaml  ouster64_mulran.yaml  ouster64_mulran_orig.yaml  v2_config.yaml  velodyne32_nclt.yaml  velodyne32_nclt_test.yaml
PPLIO/config/rviz/: poslam_rviz_config.rviz  poslam_rviz_config_self.rviz  simple_rviz_config.rviz
PPLIO/launch/: poslam_run.launch
PPLIO/src/: poslam_lio.cpp  splin.cpp  splin.hpp
PPLIO/src/tools/: tools_thread_pool.hpp
eval_data/MulRan/DCC01/: LIO-SAM_6axis_orig_t_cut.txt  exc_time_fast_lio_sc.txt  exc_time_lio_sam_sc.txt  exc_time_ltaom.txt  exc_time_pplio.txt  exc_time_pplio_sc.txt  exc_time_ppsam.txt  exc_time_ppsam_isdor.txt  exc_time_ppsam_no_f.txt  fast_lio_sc_t_cut.txt  lio_sam_sc1_t_cut.txt  ltaom_t_cut.txt  poses_fast_lio_sc.txt  poses_lio_sam_sc.txt  poses_ltaom.txt  poses_pplio.txt  poses_pplio_sc.txt  poses_ppsam_no_f.txt  poses_splin.txt  poses_splin_isdor.txt  pplio_sc_t_cut.txt  pplio_t_cut.txt  ppsam_no_f_t_cut.txt  ppsam_t_cut.txt  readme.md  splin_isdor_t_cut.txt
loop_optimization/: CMakeLists.txt  package.xml
loop_optimization/include/: Octree.hpp  TunningPointPairsFactor.h  common_lib.hpp
loop_optimization/launch/: run_all_avia.launch  run_all_mulran.launch  run_all_mulran_multisession.launch  run_all_nclt.launch
loop_optimization/src/: loop_detection.cpp
