<?xml version="1.0"?>
<package>
  <name>splin</name>
  <version>1.0.0</version>
  <description>PPLIO</description>
  <maintainer email="zhujun3753@163.com">Jun.Zhu</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>livox_ros_driver</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>livox_ros_driver</run_depend>

</package>
