<?xml version="1.0"?>
<package format="2">
  <name>loop_opti</name>
  <version>0.1.0</version>
  <description>The loop_opti package</description>
  <maintainer email="zhujun3753@163.com">Jun.Zhu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
